<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="20sp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_warning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30sp"
                android:text="@string/warning_write_down"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_PassPhrase"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet_passphrase"/>

            <EditText
                android:id="@+id/editText_passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_a_passphrase"
                android:paddingBottom="10sp"
                android:paddingTop="10sp"/>

            <Button
                android:id="@+id/btn_create_new_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_wallet"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_mnemonic_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editText_mnemonic"
                android:text="@string/mnemonic_words"/>

            <EditText
                android:id="@+id/editText_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:enabled="false"
                android:inputType="textMultiLine|textCapWords"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>
