<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/transparent"
              android:orientation="vertical"
              android:padding="20sp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/liteGrey"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="15sp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:gravity="center|center_vertical"
            android:orientation="vertical"
            android:layout_weight="0.8">

            <TextView
                android:id="@+id/textViewReceiveLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receive_funds"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:layout_marginTop="10sp"
                android:text="@string/qrcode_of_your_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">


                <ImageView
                    android:id="@+id/imageViewQRCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/qrcode_of_your_address" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="10sp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5sp"
            android:layout_weight="0.15">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:text="@string/ok" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
